--- a/style.css
+++ b/style.css
@@ -107,18 +107,18 @@ textarea {
 }
 
 body {
-	color: #141412;
+	color: #ffffff;
 	line-height: 1.5;
 	margin: 0;
 }
 
 a {
-	color: #ca3c08;
+	color: #ffffff;
 	text-decoration: none;
 }
 
 a:visited {
-	color: #ac0404;
+	color: #ffffff;
 }
 
 a:focus {
@@ -127,7 +127,7 @@ a:focus {
 
 a:active,
 a:hover {
-	color: #ea9629;
+	color: #141412;
 	outline: 0;
 }
 
@@ -764,7 +764,7 @@ img.wp-smiley,
  */
 
 .site {
-	background-color: #fff;
+	background-color: #3399ff;
 	border-left: 1px solid #f2f2f2;
 	border-right: 1px solid #f2f2f2;
 	margin: 0 auto;
@@ -867,7 +867,7 @@ div.nav-menu > ul {
 
 .nav-menu li:hover > a,
 .nav-menu li a:hover {
-	background-color: #220e10;
+	background-color: #3399ff;
 	color: #fff;
 }
 
@@ -899,7 +899,7 @@ ul.nav-menu ul a,
 
 ul.nav-menu ul a:hover,
 .nav-menu ul ul a:hover {
-	background-color: #db572f;
+	background-color: #3399ff;
 }
 
 ul.nav-menu li:hover > ul,
@@ -921,7 +921,7 @@ ul.nav-menu li:hover > ul,
 
 /* Navbar */
 .navbar {
-	background-color: #eeeeee;
+	background-color: #ffffff;
 	margin: 0 auto;
 	max-width: 1600px;
 	width: 100%;
@@ -1106,12 +1106,12 @@ ul.nav-menu li:hover > ul,
 
 .entry-content a,
 .comment-content a {
-	color: #bc360a;
+	color: #ffffff;
 }
 
 .entry-content a:hover,
 .comment-content a:hover {
-	color: #ea9629;
+	color: #141412;
 }
 
 .entry-content blockquote {
@@ -2393,14 +2393,15 @@ footer.entry-meta {
  */
 
 .widget {
-	background-color: rgba(247, 245, 231, 0.7);
+	/*background-color: rgba(247, 245, 231, 0.7);*/
 	font-size: 14px;
+	color: #ffffff;
 	-webkit-hyphens: auto;
 	-moz-hyphens:    auto;
 	-ms-hyphens:     auto;
 	hyphens:         auto;
 	margin: 0 0 24px;
-	padding: 20px;
+	/* padding: 20px; */
 	word-wrap: break-word;
 }
 
@@ -2498,8 +2499,8 @@ footer.entry-meta {
  */
 
 .site-footer {
-	background-color: #e8e5ce;
-	color: #686758;
+	background-color: #ffffff;
+	color: #141412;
 	font-size: 14px;
 	text-align: center;
 }
@@ -2510,11 +2511,11 @@ footer.entry-meta {
 }
 
 .site-footer a {
-	color: #686758;
+	color: #141412;
 }
 
 .site-footer .sidebar-container {
-	background-color: #555555;
+	background-color: #ffffff;
 	padding: 20px 0;
 }
 
@@ -2532,7 +2533,7 @@ footer.entry-meta {
 
 .site-footer .widget {
 	background: transparent;
-	color: #fff;
+	color: #141412;
 	float: left;
 	margin-right: 20px;
 	width: 245px;
@@ -2548,13 +2549,13 @@ footer.entry-meta {
 }
 
 .site-footer .widget a {
-	color: #ffffff;
+	color: #141412;
 }
 
 .site-footer .widget-title,
 .site-footer .widget-title a,
 .site-footer .wp-caption-text {
-	color: #b9b9b9;
+	color: #141412;
 }
 
 .site-info {
@@ -2787,6 +2788,7 @@ footer.entry-meta {
 	/* Small menu */
 	.menu-toggle {
 		cursor: pointer;
+		color:#141412;
 		display: inline-block;
 		font: bold 16px/1.3 "Source Sans Pro", Helvetica, sans-serif;
 		margin: 0;
@@ -2841,7 +2843,7 @@ footer.entry-meta {
 
 	.toggled-on .nav-menu li a:hover,
 	.toggled-on .nav-menu ul a:hover {
-		background-color: #db572f;
+		background-color: #3399ff;
 		color: #fff;
 	}
 
